# modern_cmake

./: CMakeLists.txt
myexe/: CMakeLists.txt  main.cpp
mylib/: CMakeLists.txt
mylib/include/: mylib.hpp
mylib/src/: mylib.cpp  mylib_impl.hpp
